--- a/sceen.css
+++ b/sceen.css
@@ -1,8 +1,11 @@
-body {
+* {
+  margin: 0;
   width: 100vw;
 }
 
 .passage h1 {
+  margin-top: 4%;
+  margin-bottom: 4%;
   font-size: 60px;
   text-align: center;
   width: 100vw;
@@ -16,20 +19,29 @@ body {
   display: block;
   font-size: 60px;
   border: none;
-}
-
-input[type='radio'] {
-  transform: scale(3);
+  font-weight: bold;
+  margin-top: 1.5%;
 }
 
 .news_edit {
   background-color: #f2f2f2;
-  width: 100vw;
+  width: 100%;
   margin-left: 0px;
-  padding: 15px;
+  padding-left: 4%;
+  padding-right: 4%;
+  padding-top: 1%;
 }
 
 .form_row input:not(#role) {
-  width: 98%;
+  width: 100%;
   outline: none;
+  padding: 30px;
+}
+
+input[type=radio] {
+  margin-top: 1.5%;
+  border: 0px;
+  width: 1em;
+  height: 1em;
+  font-size: 60px;
 }
