--- a/sceen.css
+++ b/sceen.css
@@ -8,7 +8,7 @@
 body {
 	margin:0px;
 	padding:0px;
-    text-align: center;
+// text-align: center;
 }
 .login {
 	background:url(img/signup_bg.png);
