--- a/sceen.css
+++ b/sceen.css
@@ -45,7 +45,9 @@ body {
   margin-bottom: 10px;
 }
 
-.login .form_group input, .button, input[name$="login_submit"] {
+.login .form_group input, 
+.login .button, 
+input[name$="login_submit"] {
   text-align: center;
   background-color: #37bde5;
   width: 80%;
@@ -57,7 +59,8 @@ body {
   margin: 5px;
 }
 
-.login .form_group input[name$="userid"], .form_group input[name$="password"] {
+.login .form_group input[name$="userid"], 
+.login .form_group input[name$="password"] {
   color: #37bde5;
   text-align: left;
   padding-left: 30px;
@@ -77,6 +80,7 @@ body {
 /*-----------------*/
 .afterlogin{
 	width:90%;
+	height:90%;
 	padding:5%;
 }
 
@@ -90,12 +94,24 @@ body {
 
 .afterlogin .profile {
   line-height: 25px;
-  background: #DFD7CA;
-  margin: 10px 0px;
+  margin: 10px auto;
+  height:20%;
+  padding:5%;
+}
+
+.afterlogin .profile a.button{
+  text-align: center;
+  background-color: #37bde5;
+  color: #FFF;
+  border-radius: 100px;
+  border: 1px #FFF solid;
+  padding: 5px;
+
 }
 
 .afterlogin .tasklist {
   overflow:scroll;
+  height:100%;
 }
 
 .afterlogin .tasklist ul {
@@ -107,7 +123,7 @@ body {
 .afterlogin .tasklist ul li a.n {
   margin: 5%;
   border-top: #666666 dashed 1px;
-  width: 90%;
+  width: 80%;
   height: 120px;
   float: left;
   text-decoration: none;
