--- a/css/screen_history.css
+++ b/css/screen_history.css
@@ -1,13 +1,42 @@
+.history{
+    background-color:#f0f0f0;
+}
+
 .tasklist ul{
 	list-style:none;
-	padding:0;
+	padding:400px 0;
+
 }
 
 .tasklist ul li{
 	text-decoration:none;
 	width:100%;
-	padding:3%;
+	padding:5%;
 	box-sizing:border-box;
-	font-size:20pt;
-	height:300px;
+	height:220px;
+    color:#000000;
+    position:relative;
+    z-index: 1;
+}
+.tasklist li img{
+    vertical-align: middle;
+}
+.tasklist li .title{
+  font-size:2.5vh;
+  color:#000000;
+  background-color:#f0f0f0; 
+  top:-2vh; 
+
+}
+.tasklist li .time{
+  font-size:2vh;
+  top:7vh;
+  margin-left:10vw;
+  position:absolute;
+
+}
+.tasklist li .money{
+  padding-top:-100px;
+  float: right;
+  font-size:2.5vh;
 }
