--- a/css/sceen.css
+++ b/css/sceen.css
@@ -1,5 +1,8 @@
+@import url(//fonts.googleapis.com/earlyaccess/cwtexhei.css);
 * {
   margin: 0px;
+  font-family: 'cwTeXHei', sans-serif;
+  font-family: Microsoft JhengHei;
 }
 
 body {
@@ -77,6 +80,7 @@ input[name$="login_submit"] {
   margin:0 auto;
 }
 
+
 .header{
 	width:100%;
 	position:fixed;
@@ -87,7 +91,7 @@ input[name$="login_submit"] {
     background-color:#1fb3df;
     z-index:2;
 }
-.title{  
+.header .title{  
     margin-top:4vh;
 	height:6.5vh;
 	text-align:center;
@@ -99,11 +103,13 @@ input[name$="login_submit"] {
     vertical-align: middle;
 
 }
-.title img{
+.header .title img{
     float:right;
-    padding:0 2vh;
-    height:4.5vh;
+	height:4.5vh;
     width:auto;
+	position:relative;
+	top:-4.5vh;
+	right:2vh;
 }
 .header ul{
 	list-style:none;
@@ -114,15 +120,23 @@ input[name$="login_submit"] {
     background-color:#1fb3df;
     line-height:7vh;
     box-shadow:0px 4px 14px 6px rgba(0,0,0,0.3);
+	padding:0 20%;
 }
 .header ul li{
     display:inline-block;
-	box-sizing:border-box;
+	box-sizing:content-box;
 	color:#ffffff;
     background-color:#1fb3df;
-    padding:0 10%;
     font-size:2.5vh;
+	width:30%;
+	float:left;
 }
+
+.header ul li a{
+	color:#FFF;
+	text-decoration:none;
+}
+
 
 /*-----------------
 .afterlogin{
