--- a/css/screen_bank.css
+++ b/css/screen_bank.css
@@ -1,46 +1,90 @@
-.tasklist{
-	height:80%;
-	overflow:scroll;
-	width:70%;
-	top:15%;
-	position:absolute;
+.bank{
+	background:#4a4a4a;
+	width:100%;
+	height:100%;
+	padding:5%;
+	box-sizing:border-box;
 }
+
+.tasklist{
+	overflow:scroll;
+	width:65%;
+	height:56%;
+	top:33%;
+	position:absolute;
+	background:#252525;
+	border-radius:10px;
+}
+
+.tasklist .tit{
+	height:15%;
+	color:#FFF;
+	text-align:center;
+	font-size:45px;
+	vertical-align:middle;
+}
+
 .tasklist ul{
 	list-style:none;
 	padding:0;
 	float:left;
 	width:100%;
+	box-sizing:border-box;
 }
 
 .tasklist ul li{
 	text-decoration:none;
 	width:100%;
-	padding:3%;
+	padding:7%;
 	box-sizing:border-box;
 	font-size:20pt;
-	height:150px;
+	height:20%;
+	border-top:#979797 1px solid;
 }
 
 .tasklist ul li img{
-	width:80px;
-	height:80px;
+	height:100%;
+	width:auto;
 }
 
+.tasklist ul li .money{
+	color:#fba415;
+	font-size:55px;
+	float:right;
+	vertical-align:middle;
+	
+}
 .bar{
-	float:left;
-	border:#333 1px dashed;
-	width:100px;
-	height:80%;
-	margin-left:75%;
+
+	width:20%;
+	margin-left:70%;
+	height:56%;
+	top:33%;
+	position:absolute;
+	background:#252525;
+	border-radius:10px;
 }
 
 .new_task{
 	width:100%;
-	height:100px;
-	background:#036;
+	height:8%;
+	background:#1fb3df;
 	position:fixed;
 	bottom:0;
 	left:0;
-	color:#FFF;
 	text-align:center;
+}
+
+.nothing{
+	height:100%;
+	   display:inline-block;
+   vertical-align:middle;
+}
+
+.new_task a{
+	color:#FFF;
+	font-size:45px;
+	vertical-align:middle;
+	line-height:inherit;
+	text-decoration:none;
 }
