--- a/css/sceen.css
+++ b/css/sceen.css
@@ -93,7 +93,7 @@ input[name$="login_submit"] {
 }
 .header .title{  
     margin-top:4vh;
-	height:6.5vh;
+	height:4vh;
 	text-align:center;
 	font-size:3vh;
     width: 100%;
@@ -103,7 +103,8 @@ input[name$="login_submit"] {
     vertical-align: middle;
 
 }
-.header .title img{
+
+.header .title .right{
     float:right;
 	height:4.5vh;
     width:auto;
@@ -111,10 +112,11 @@ input[name$="login_submit"] {
 	top:-4.5vh;
 	right:2vh;
 }
+
 .header ul{
 	list-style:none;
     position:relative;
-    margin-top:-3vh;
+/*    margin-top:-3vh;*/
     width: 100%;
     height:7.5vh;
     background-color:#1fb3df;
