--- a/css/sceen.css
+++ b/css/sceen.css
@@ -1,4 +1,5 @@
 @import url(//fonts.googleapis.com/earlyaccess/cwtexhei.css);
+@charset "utf-8";
 * {
   margin: 0px;
   font-family: 'cwTeXHei', sans-serif;
@@ -139,6 +140,31 @@ input[name$="login_submit"] {
 	text-decoration:none;
 }
 
+.nothing{
+	height:100%;
+	display:inline-block;
+    vertical-align:middle;
+}
+
+.btn_bottom {
+	width:100%;
+	height:8%;
+	background:#1fb3df;
+	position:fixed;
+	bottom:0;
+	left:0;
+	text-align:center;
+}
+
+
+.btn_bottom a,
+.btn_bottom span{
+	color:#FFF;
+	font-size:45px;
+	vertical-align:middle;
+	line-height:inherit;
+	text-decoration:none;
+}
 
 /*-----------------
 .afterlogin{
