--- a/css/screen_bank.css
+++ b/css/screen_bank.css
@@ -6,6 +6,16 @@
 	box-sizing:border-box;
 }
 
+.save{
+	width:90%;
+	margin:0 auto;
+	top:23%;
+	position:absolute;
+	background:#252525;
+	border-radius:10px;
+	height:8%;
+}
+
 .tasklist{
 	overflow:scroll;
 	width:65%;
@@ -55,7 +65,6 @@
 	
 }
 .bar{
-
 	width:20%;
 	margin-left:70%;
 	height:56%;
@@ -63,29 +72,19 @@
 	position:absolute;
 	background:#252525;
 	border-radius:10px;
+	padding:15px;
+	box-sizing:border-box;
 }
 
-.new_task{
+.bar .full{
+	background:#78cc33;
 	width:100%;
-	height:8%;
-	background:#1fb3df;
-	position:fixed;
-	bottom:0;
-	left:0;
-	text-align:center;
-}
-
-.nothing{
 	height:100%;
-	   display:inline-block;
-   vertical-align:middle;
 }
 
-.new_task a,
-.new_task span{
-	color:#FFF;
-	font-size:45px;
-	vertical-align:middle;
-	line-height:inherit;
-	text-decoration:none;
+.bar .full .perc{
+	height:30%;
+	background:#4a4a4a;
+	bottom:0;
 }
+
