--- a/css/screen_task_detail.css
+++ b/css/screen_task_detail.css
@@ -10,6 +10,7 @@
 	margin-top:20%;
 	box-sizing:border-box;
 	padding:5%;
+/*	padding-bottom:10%;*/
 	font-size:2.5vh;
 }
 
@@ -23,6 +24,9 @@
 	padding:5%;
 	box-sizing:border-box;
 	height:20%;
+	background-image:url(../img/dot.png);
+	background-position:center;
+	background-repeat:no-repeat;
 }
 
 .info .pro div{
@@ -38,6 +42,7 @@
 	width:200px;
 	height:auto;
 	border-radius:100px;
+	border:3px #CCCCCC dashed;
 }
 
 .info span.title{
