--- a/css/screen_social.css
+++ b/css/screen_social.css
@@ -1,9 +1,20 @@
-@charset "utf-8";
-/* CSS Document */
 .social{
-	background:#4a4a4a;
 	width:100%;
 	height:100%;
 	padding:5%;
 	box-sizing:border-box;
+}
+
+.social .member,
+.social .timeline{
+	padding-top:400px;
+	font-size:40px;
+}
+
+.social ul{
+	padding:0;
+}
+
+.social ul li{
+	list-style:none;
 }
