--- a/css/sceen.css
+++ b/css/sceen.css
@@ -171,7 +171,7 @@ input[name$="login_submit"] {
     background-color:#1fb3df;
     line-height:7vh;
     box-shadow:0px 4px 14px 6px rgba(0,0,0,0.3);
-	padding:0 20%;
+	padding:0;
 }
 .header ul li{
     display:inline-block;
@@ -179,7 +179,7 @@ input[name$="login_submit"] {
 	color:#ffffff;
     background-color:#1fb3df;
     font-size:2.5vh;
-	width:20%;
+	width:33%;
 	float:left;
 }
 
