--- a/css/screen_social.css
+++ b/css/screen_social.css
@@ -1,14 +1,25 @@
 .social{
 	width:100%;
 	height:100%;
-	padding:5%;
+	box-sizing:border-box;
+	
+	font-size:40px;
+}
+
+.social .childrank{
+	height:50%;
+	background:#AAA;
+	padding-top:355px;
 	box-sizing:border-box;
 }
 
-.social .member,
 .social .timeline{
-	padding-top:400px;
-	font-size:40px;
+	padding-top:220px;
+}
+.social .other ul li{
+	width:50%;
+	height:25%;
+	float:left;
 }
 
 .social ul{
