--- a/css/screen_social.css
+++ b/css/screen_social.css
@@ -1,31 +1,32 @@
-.social{
-	width:100%;
-	height:100%;
-	box-sizing:border-box;
-	
-	font-size:40px;
+.social {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  font-size: 40px;
 }
 
-.social .childrank{
-	height:50%;
-	background:#AAA;
-	padding-top:355px;
-	box-sizing:border-box;
+.social .childrank {
+  height: 50%;
+  background: #AAA;
+  padding-top: 355px;
+  box-sizing: border-box;
 }
 
-.social .timeline{
-	padding-top:220px;
-}
-.social .other ul li{
-	width:50%;
-	height:25%;
-	float:left;
+.social .timeline {
+  padding-top: 220px;
 }
 
-.social ul{
-	padding:0;
+.social .other ul li {
+  width: 50%;
+  height: 25%;
+  float: left;
+  background: #1fb3df;
 }
 
-.social ul li{
-	list-style:none;
+.social ul {
+  padding: 0;
+}
+
+.social ul li {
+  list-style: none;
 }
