--- a/css/screen_social.css
+++ b/css/screen_social.css
@@ -10,6 +10,8 @@
   background: #AAA;
   padding-top: 355px;
   box-sizing: border-box;
+  display: flex;
+  align-items: flex-end;
 }
 
 .social .timeline {
