--- a/screen_social.css
+++ b/screen_social.css
@@ -1,9 +1,32 @@
-@charset "utf-8";
-/* CSS Document */
-.social{
-	background:#4a4a4a;
-	width:100%;
-	height:100%;
-	padding:5%;
-	box-sizing:border-box;
+.social {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  font-size: 40px;
+}
+
+.social .childrank {
+  height: 50%;
+  background: #AAA;
+  padding-top: 355px;
+  box-sizing: border-box;
+}
+
+.social .timeline {
+  padding-top: 220px;
+}
+
+.social .other ul li {
+  width: 50%;
+  height: 25%;
+  float: left;
+  /*background: #1fb3df;*/
+}
+
+.social ul {
+  padding: 0;
+}
+
+.social ul li {
+  list-style: none;
 }
