--- a/css/sceen.css
+++ b/css/sceen.css
@@ -18,20 +18,26 @@ body {
     height: 100%;
     width: 100%;
     margin: 0px auto;
-    padding-top: 10%;
+    padding-top: 15%;
 	box-sizing:border-box;
 	text-align:center;
 }
 
 .login .logo {
   border-radius: 50%;
-  height: 180px;
-  width: 180px;
+  height: 150px;
+  width: 150px;
   margin:0 auto;
 }
 
+.login img[name$="logo"] {
+	width:150px;
+	height:150px;
+	
+}
+
 .login img[name$="invalid_name"] {
-  width: 75%;
+  width: 60%;
   height: auto;
   margin: 20px auto;
 }
@@ -55,20 +61,33 @@ input[name$="login_submit"] {
   text-align: center;
   background-color: #37bde5;
   width: 80%;
-  height: 10%;
+  height: 8%;
   color: #FFF;
-  font-size: 24px;
+  font-size: 20px;
   border-radius: 100px;
-  border: 3px #FFF solid;
+  border: 2px #FFF solid;
   margin: 5px;
 }
 
 .login .form_group input[name$="userid"], 
 .login .form_group input[name$="password"] {
-  color: #37bde5;
+  color:#333;
   text-align: left;
   padding-left: 30px;
   background-color: #AFE4F4;
+}
+
+input::-webkit-input-placeholder{ 
+    color:    #37bde5;
+}
+input:-moz-placeholder { 
+    color:    #37bde5;
+}
+input::-moz-placeholder { 
+    color:    #37bde5;
+}
+input:-ms-input-placeholder { 
+    color:    #37bde5;
 }
 
 .login .error {
@@ -213,7 +232,8 @@ input[name$="login_submit"] {
 	line-height:inherit;
 	text-decoration:none;
 }
-/*from slide-window to slide-dot is tutorial page*/
+
+/*-------------tutor---------*/
 body::-webkit-scrollbar { display: none; }
 
 #slide-window
@@ -266,23 +286,22 @@ body::-webkit-scrollbar { display: none; }
   { 
   position:fixed; 
   z-index:9; 
-  top:93%; 
-  width: 50px;
-  height: 50px;
+  top:94%; 
+  width: 10%;
+  height: 5%;
   cursor:pointer; 
-  opacity:0.7; 
   }
 
-.arrow:hover { opacity:1.0; }
+
 #left 
   { 
   left:3%; 
-  font-size: 30px;
+  font-size: 16px;
   }
 #right 
   {
   right:6%; 
-  font-size: 30px;
+  font-size: 16px;
   }
 #hide 
   { 
@@ -291,7 +310,9 @@ body::-webkit-scrollbar { display: none; }
   top: 94%;
   right: 3%;
   height: 10px;
-  font-size: 20px;
+  font-size: 16px;
+  color: #37bde5;
+  font-weight:bold;
   }
 
 .slide-dot
@@ -302,149 +323,12 @@ body::-webkit-scrollbar { display: none; }
   width: 100%;
 }
 
-/*-----------------
-.afterlogin{
-	width:90%;
-	height:90%;
-	padding:5%;
+.agree {
+	color:#FFF;
+	font-size:12px;
+	width:100%;
+	text-align:center;
+	position:absolute;
+	bottom:3%;
+	z-index:0;
 }
-
-.afterlogin .pass {
-  color: #009;
-  font-size: 12px;
-  background: #FFFFCC;
-  padding: 5px;
-  border: #009 solid 1px;
-}
-
-.afterlogin .profile {
-  line-height: 25px;
-  margin: 10px auto;
-  height:20%;
-  padding:5%;
-}
-
-.afterlogin .profile a.button{
-  text-align: center;
-  background-color: #37bde5;
-  color: #FFF;
-  border-radius: 100px;
-  border: 1px #FFF solid;
-  padding: 5px;
-
-}
-
-.afterlogin .tasklist {
-  overflow:scroll;
-  height:100%;
-}
-
-.afterlogin .tasklist ul {
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
-}
-
-.afterlogin .tasklist ul li a.n {
-  margin: 5%;
-  border-top: #666666 dashed 1px;
-  width: 80%;
-  height: 120px;
-  float: left;
-  text-decoration: none;
-  font-size: 12px;
-  color: #333;
-  line-height: 18px;
-  margin-bottom: 10px;
-  padding: 5%;
-  position: relative;
-}
-
-
-.afterlogin .tasklist ul li a img {
-	margin-right:10px;
-	float:left;
-	width:190px;
-	border:#FFF solid 2px;
-}
-.afterlogin .tasklist ul li a:hover img {
-	border:#000 solid 2px;
-}
-.afterlogin .tasklist ul li a span.title {
-	font-size: 14px;
-	color: #006600;
-	font-weight: bold;
-	display:block;
-	margin-bottom:5px;
-
-}
-.afterlogin .tasklist ul li a span.summary{
-	margin:10px 0px;
-}
-.afterlogin .tasklist ul li a:hover span.title {
-	color:#C00;
-	text-decoration:underline;
-}
-
-.afterlogin .tasklist ul li a:hover {
-  background: #FFFFCC;
-  border-top: #000 1px solid;
-}
-
-.afterlogin .page {
-  margin: 0px;
-  font-size: 12px;
-  color: #006600;
-}
-
-.afterlogin .page a {
-  font-size: 12px;
-  color: #CC0033;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.afterlogin .page a:hover {
-  color: #FFFF00;
-  text-decoration: none;
-}
-
-.afterlogin .ed {
-  color: #CC0066;
-}
-
-.sec {
-  float: left;
-}
-
-.pri {
-  float: right;
-}
-
-.homework {
-  overflow: auto;
-  height: 650px;
-  font-size: 12px;
-}
-
-.homework ul {
-  list-style: none;
-  width: 750px;
-}
-
-.homework ul li .user {
-  background: #C0C0C0;
-  color: #000;
-}
-
-.homework ul li {
-  border-bottom: #999 dashed 1px;
-}
-
-.homework ul li a {
-  color: #900;
-}
-
-.homework ul li a:hover {
-  color: #FF0;
-}*/
