--- a/css/screen_social.css
+++ b/css/screen_social.css
@@ -1,18 +1,31 @@
 .social {
   width: 100%;
-  height: 100%;
+/*  height: 100%;*/
   box-sizing: border-box;
   font-size: 40px;
 }
 
 .social .childrank {
-  height: 50%;
-  background: #AAA;
-  padding-top: 355px;
+  height: 40%;
+  background-image:url(../Taskphoto/6208d18a.jpg);
+  background-size:100% auto;
+  margin-top: 355px;
   box-sizing: border-box;
   display: flex;
   align-items: flex-end;
   padding: 25px;
+  border-color: #78cc33;
+}
+
+.social .childrank img{
+	border-radius:50%;
+}
+
+.social .childrank span{
+	color:#000;
+	font-weight:bold;
+	padding:5px;
+	font-size:45px;
 }
 
 .social .timeline {
@@ -21,15 +34,31 @@
 
 .social .other ul li {
   width: 50%;
-  height: 25%;
+  height: 20%;
   float: left;
-  display: flex;
+  /*display: flex;
   align-items: flex-end;
-  /*backgrond: #1fb3df;*/
+  backgrond: #1fb3df;*/
 }
 
-.childrank {
-  border-color: #78cc33;
+.social .other ul li img[alt$="taskphoto"]{
+	float:left;
+}
+.social .other .bar{
+	height:30%;
+	background:#FFF;
+	float:left;
+	width:100%;
+	top:-30%;
+	position:relative;
+	background:rgba(255,255,255,0.6);
+	padding:10px;
+	box-sizing:border-box;
+}
+
+.social .other ul li img[alt$="profilepic"]{
+	display:inline-block;
+    vertical-align:middle;
 }
 
 .social ul {
@@ -38,13 +67,6 @@
 
 .social ul li {
   list-style: none;
-}
-
-.otherdiv {
-  width: 100%;
-  padding: 20px;
-  background-color: #ffffff;
-  opacity: 0.3;
 }
 
 .social a {
@@ -59,10 +81,15 @@
   position: absolute;
   padding: 25px;
   bottom: 0;
-  background-color: #ffffff;
+  background:rgba(255,255,255,0.6);
   box-sizing: border-box;
   width: 100%;
-  opacity: 0.5;
+  font-size:55px;
+
+}
+
+.social .timeline .whiteBar img{
+	border-radius:50%;
 }
 
 .social .timeline .whiteBar span{
