--- a/css/screen_social.css
+++ b/css/screen_social.css
@@ -81,10 +81,10 @@
   position: absolute;
   padding: 25px;
   bottom: 0;
-  background:rgba(255,255,255,0.6);
+  background:rgba(255,255,255,0.7);
   box-sizing: border-box;
   width: 100%;
-  font-size:55px;
+  font-size:50px;
 
 }
 
@@ -92,7 +92,13 @@
 	border-radius:50%;
 }
 
-.social .timeline .whiteBar span{
+.social .timeline .whiteBar p{
   position: absolute;
   top: 25%;
+  margin-left:200px;
+}
+
+.like {
+	margin-left:70%;
+	top:25%; position: absolute;
 }
